# lery-profile

./: .gitignore  README.md  actions.yml  app_logging.py  export_cv.py  export_doc.md  pyproject.toml
.github/workflows/: build-cv.yml
cv/: README.md  full_cv.md  master_cv.md  revised_cv.md  short_cv.md
job-interview/: cv.md  preparation-topics.md
lerning/: ML.lerning.plan.md  gen.ai.md  python.md
