[tool.poetry]
#package-mode = false
name = "github-profile"
version = "0.1.0"
description = ""
authors = ["Lery <orlov332@gmail.com>"]
readme = "README.md"
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
markdown-pdf = "^1.3.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
export-cv = "export_cv:main"
